# ligue1Analyzer

./: .gitignore  README.md  analyserGs.py  analyzerFBREF.py  fetchGS.py  pyproject.toml  quickstart.py  token.json
Scripts/: 01_import_data.ipynb
Smoketest/: analyzerFBREF.py
analysis/: first_script.ipynb
notebooks/: 01_import_data.ipynb  02_explo.ipynb
src/data/: analyserGs.py  analyzerFBREF.py  fetchGS.py
