[tool.poetry]
name = "ligue1analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
google = "^3.0.0"
google-api-python-client = "^2.97.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
pandas = ">=1.1.0,<2.0.0"
altair = ">=4.0.0,<5.0.0"
datapane = "^0.16.7"

[tool.poetry.dev-dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
